add test and rework some services and repos to more reactive way